APK_1.3.16： 1.删除雷管后，其他雷管延期不改变 2.在线检测时如果列表出现负数会提示并不能继续 3.Log文件太大导致死机
APK_1.3.17：
1.所有操作加上日志
2.上传超时退出
3.网络不好死机问题
4.所有提示框字体变大

APK_1.4.0：
1.减小apk文件大小
2.修改电压电流读取方式为单指令
3.充电前和充电后都增加批量在线检测

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,19 +3,16 @@
     <string name="device_type">型号：FB-L880</string>
     <string name="txt_current">电流：</string>
     <string name="txt_voltage">电压：</string>
-    <string name="delay_scheme_1">1.延期方案</string>
-    <string name="detonate_ctrl_1">2.起爆控制</string>
-    <string name="detonate_auth_1">3.离线授权</string>
-    <string name="detonate_rec_1">4.爆破记录</string>
-    <string name="detonate_cooperate_1">5.联机爆破</string>
-    <string name="txt_settings_1">6.本机设置</string>
     <string name="delay_scheme">延期方案</string>
     <string name="detonate_rec">爆破记录</string>
     <string name="txt_settings">本机设置</string>
     <string name="detonate_cooperate">联机爆破</string>
-    <string name="add_detonator_1">1.扫描注册</string>
-    <string name="check_schedule_1">2.修改延期</string>
-    <string name="check_detonator_1">3.单发检测</string>
+    <string name="detonate_ctrl">起爆控制</string>
+    <string name="detonate_auth">离线授权</string>
+    <string name="button_new_scheme">新建方案</string>
+    <string name="button_add_detonator">扫描注册</string>
+    <string name="button_check_schedule">修改延期</string>
+    <string name="button_check_detonator">单发检测</string>
     <string name="add_detonator">扫描注册雷管</string>
     <string name="check_schedule">修改延期方案</string>
     <string name="check_locate">定位检测</string>
@@ -24,21 +21,23 @@
     <string name="error_detonator">错误雷管列表</string>
     <string name="title_activity_welcome">中爆终端控制器</string>
     <string name="title_props_settings">参数设置</string>
-    <string name="hint_inputUsername">请输入用户名</string>
-    <string name="hint_inputPassword">请输入密码</string>
-    <string name="txt_RegisterUser">用户注册</string>
-    <string name="txt_RememberPwd">记住密码</string>
-    <string name="table_serialNo">序号</string>
+    <string name="hint_input_username">请输入用户名</string>
+    <string name="hint_input_password">请输入密码</string>
+    <string name="txt_register_user">用户注册</string>
+    <string name="txt_remember_pwd">记住密码</string>
+    <string name="table_serial_no">序号</string>
     <string name="table_address">管壳码</string>
     <string name="table_delay">延期</string>
     <string name="table_row">排号</string>
-    <string name="table_hole">孔间</string>
+    <string name="table_hole">孔号</string>
     <string name="table_inside">孔内</string>
     <string name="table_section">段号</string>
     <string name="table_section_inside">段内</string>
     <string name="table_version">版本号</string>
     <string name="table_size">大小</string>
     <string name="table_download_date">下载日期</string>
+    <string name="table_scheme_name">项目名称</string>
+    <string name="table_create_date">创建日期</string>
     <string name="hint_inputDelay">请输入延期</string>
     <string name="txt_row_delay">*.排间：</string>
     <string name="txt_inside_delay">#.孔内：</string>
@@ -73,7 +72,7 @@
     <string name="settings_bt">蓝牙</string>
     <string name="settings_bt_rescan">重新扫描</string>
     <string name="settings_bt_visible">可用网络</string>
-    <string name="settings_disp">显示设置</string>
+    <string name="settings_display">显示设置</string>
     <string name="settings_sound">声音设置</string>
     <string name="settings_finger">指纹设置</string>
     <string name="settings_server">上报设置</string>
@@ -108,7 +107,6 @@
     <string name="text_voltage_unit">V</string>
     <string name="progress_charging">正在充电，请稍候！</string>
     <string name="btn_continue">继续</string>
-    <string name="detected_amount">在线电子雷管数：</string>
     <string name="used_time">总计用时：</string>
     <string name="delay_period">总延期：</string>
     <string name="check_auth">雷管授权验证</string>
@@ -225,6 +223,9 @@
     <string name="unite_communication_fail">通讯失败！</string>
     <string name="version_number">版本号：%1$s</string>
     <string name="device_code">编号：%1$s</string>
+    <string name="received_list">蓝牙接收</string>
+    <string name="offline_detonator">离线雷管</string>
+    <string name="detect_result">检测结果</string>
     <string name="message_register_detonator">正在重新注册起爆器！</string>
     <string name="message_waveform_data_error">数据错误生成失败!</string>
     <string name="message_scan_timeout">未扫描到管壳码!</string>
@@ -299,10 +300,12 @@
     <string name="message_input_id">请输入身份证号码！</string>
     <string name="message_input_id_error">身份证号码输入有误！</string>
     <string name="message_input_contract_code">请输入合同编号！</string>
+    <string name="message_name_input_error">名称不能为空！</string>
     <string name="message_data_input_error">数据不能为空！</string>
     <string name="message_bai_se_check_success">现场人员检验成功！</string>
     <string name="message_bai_se_check_fail">现场人员检验失败！</string>
     <string name="message_upload_log">开始上传日志</string>
+    <string name="message_upload_records">开始上传列表至中爆</string>
     <string name="message_save_success">保存成功！</string>
     <string name="message_cannot_delete_not_upload">不能删除未上传的记录！</string>
     <string name="message_no_select_record">没有选中记录！</string>
@@ -327,7 +330,10 @@
     <string name="message_status_error">获取失败！</string>
     <string name="dialog_title_cancel_upload">取消上传</string>
     <string name="dialog_title_delete_record">删除爆破记录</string>
+    <string name="dialog_title_delete_scheme">删除延期方案</string>
     <string name="dialog_title_new_list">新建列表</string>
+    <string name="dialog_title_new_scheme">新建方案名称</string>
+    <string name="dialog_title_modify_scheme">修改方案名称</string>
     <string name="dialog_title_download">数据下载</string>
     <string name="dialog_title_upload">数据上传</string>
     <string name="dialog_title_restore">导入列表</string>
@@ -367,6 +373,7 @@
     <string name="dialog_clear_list">是否确定清除列表？</string>
     <string name="dialog_explode_psw_error">起爆密码验证错误！</string>
     <string name="dialog_explode_status_error">起爆状态验证错误！</string>
+    <string name="dialog_exist_offline">检测到有%1$d发离线，请重新在线检测！</string>
     <string name="dialog_exit_explode">是否退出起爆？</string>
     <string name="dialog_exit_detect">是否退出检测？</string>
     <string name="dialog_exit_download">下载未完成，是否继续退出？</string>
@@ -377,6 +384,7 @@
     <string name="dialog_confirm_online_download">是否确定在线下载？</string>
     <string name="dialog_confirm_delete_detonator">是否确定删除雷管？</string>
     <string name="dialog_confirm_delete_record">是否确定删除记录？</string>
+    <string name="dialog_confirm_delete_scheme">是否确定删除延期方案？</string>
     <string name="dialog_confirm_exit_upload">正在上传记录，是否确定退出？</string>
     <string name="dialog_confirm_upload">是否确定上传至%1$s？</string>
     <string name="dialog_confirm_upload_all">是否确定上传%1$d条记录至%2$s？</string>
@@ -384,6 +392,7 @@
     <string name="dialog_confirm_delete_version">是否确定删除%1$d个版本？</string>
     <string name="dialog_clear_detected">重新选择将清除之前检测的雷管，是否继续？</string>
     <string name="dialog_delay_out_of_range">最大延期超过6秒，是否继续？</string>
+    <string name="dialog_delay_out_of_range_2">延期不能小于0，请检查列表！</string>
     <string name="dialog_detect_again">是否重新检测一遍？</string>
     <string name="dialog_enter_charge">\n进入充电前请工作人员撤离现场！\n</string>
     <string name="dialog_short_circuit">短路保护，请检查线路！</string>
@@ -392,17 +401,20 @@
     <string name="dialog_overload">负载超过检测数量！约%1$d发</string>
     <string name="dialog_exit_modify">是否不保存信息？</string>
     <string name="dialog_found_new_version">发现新版本：%1$s，是否立即更新？</string>
-    <string name="menu_send_list">1.发送列表</string>
-    <string name="menu_cancel_pair">2.取消匹配</string>
+    <string name="menu_send_list">发送列表</string>
+    <string name="menu_cancel_pair">取消匹配</string>
     <string name="menu_wifi_connect">连接网络</string>
     <string name="menu_wifi_forget">忘记网络</string>
     <string name="menu_wifi_modify">修改网络</string>
-    <string name="menu_delete">1.删除</string>
-    <string name="menu_modify">2.修改延期</string>
-    <string name="menu_tunnel_section_insert">3.段间插入</string>
-    <string name="menu_tunnel_hole_insert">4.段内插入</string>
-    <string name="menu_open_air_hole_insert">3.孔间插入</string>
-    <string name="menu_open_air_inside_insert">4.孔内插入</string>
+    <string name="menu_delete_detonator">删除雷管</string>
+    <string name="menu_modify">修改延期</string>
+    <string name="menu_delete_scheme">删除方案</string>
+    <string name="menu_modify_name">修改名称</string>
+    <string name="menu_select">选择方案</string>
+    <string name="menu_tunnel_section_insert">段间插入</string>
+    <string name="menu_tunnel_hole_insert">段内插入</string>
+    <string name="menu_open_air_hole_insert">孔间插入</string>
+    <string name="menu_open_air_inside_insert">孔内插入</string>
     <string name="choice_15_seconds">15秒</string>
     <string name="choice_30_seconds">30秒</string>
     <string name="choice_1_minute">1分钟</string>
