APK_1.4.2： 1.修改网络错误导致提示停止运行 2.收发指令转成文字记录Debug.txt 3.修改存在雷管号位置不正确问题 4.修改延期方案界面按3键进入单发检测问题 5.删除锁码命令 6.修改脚线注册按得太快会一直转圈问题 7.修改准备起爆双手按住按键时，按到退出键会自动起爆问题

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -137,6 +137,7 @@
     <string name="mode_open_air">露天</string>
     <string name="mode_tunnel">井巷</string>
     <string name="mode_wireless">远程</string>
+    <string name="scheme_mode">多延期方案</string>
     <string name="semi_product_title">半成品检测</string>
     <string name="select_type">选择雷管类型：</string>
     <string name="code_text">当前管壳码：___________________</string>
@@ -210,6 +211,8 @@
     <string name="system_info_imei">IMEI号</string>
     <string name="system_info_iccid">ICCID号</string>
     <string name="system_info_number">移动号码</string>
+    <string name="system_info_board_date">起爆板软件日期</string>
+    <string name="system_info_board_version">起爆板版本号</string>
     <string name="unite_searching_devices">正在搜索联机设备</string>
     <string name="unite_device_not_found">没有搜索到设备！</string>
     <string name="unite_connecting_device">正在连接联机设备</string>
@@ -238,7 +241,7 @@
     <string name="message_detonator_write_error">雷管写入失败！</string>
     <string name="message_detonator_not_detected">检测不到雷管！</string>
     <string name="message_detonator_read_shell_error">管壳码读取错误！</string>
-    <string name="message_detonator_read_field_error">数据读取错误！</string>
+    <string name="message_detonator_read_field_error">延期读取错误！</string>
     <string name="message_detonator_delay_error">管壳码：%1$s\n预设值：%2$dms\n检测值：%3$dms\n延期不一致！</string>
     <string name="message_detonator_tunnel_download_fail">段号：%1$d 段内：%2$d下载失败！</string>
     <string name="message_detonator_open_air_download_fail">排号:%1$d 孔号:%2$d 孔内:%3$d下载失败！</string>
@@ -281,7 +284,7 @@
     <string name="message_update_file_error">文件存取错误！</string>
     <string name="message_update_version_error">版本号错误！</string>
     <string name="message_update_get_version_error">获取版本号错误！</string>
-    <string name="message_update_file_size">文件大小：%1$d</string>
+    <string name="message_update_file_size">文件大小：%1$dB</string>
     <string name="message_fill_enterprise">请先填写企业信息！</string>
     <string name="message_offline_download_fail">下载失败！请检查网络或者企业信息是否正确！</string>
     <string name="message_offline_download_success">离线下载完成！</string>
@@ -371,8 +374,7 @@
     <string name="dialog_device_address">设备地址</string>
     <string name="dialog_device_signal">信号强度</string>
     <string name="dialog_clear_list">是否确定清除列表？</string>
-    <string name="dialog_explode_psw_error">起爆密码验证错误！</string>
-    <string name="dialog_explode_status_error">起爆状态验证错误！</string>
+    <string name="dialog_explode_status_error">需要检查线路！</string>
     <string name="dialog_exist_offline">检测到有%1$d发离线，请重新在线检测！</string>
     <string name="dialog_exit_explode">是否退出起爆？</string>
     <string name="dialog_exit_detect">是否退出检测？</string>
@@ -396,6 +398,7 @@
     <string name="dialog_detect_again">是否重新检测一遍？</string>
     <string name="dialog_enter_charge">\n进入充电前请工作人员撤离现场！\n</string>
     <string name="dialog_short_circuit">短路保护，请检查线路！</string>
+    <string name="dialog_large_current">可能存在漏电，请检查线路！</string>
     <string name="dialog_open_circuit">线路已断开，请检查！</string>
     <string name="dialog_confirm_explode">是否确定起爆？</string>
     <string name="dialog_overload">负载超过检测数量！约%1$d发</string>
@@ -491,20 +494,28 @@
     <string name="button_calibrate">时钟校准</string>
     <string name="button_write_sn">写入序号</string>
     <string name="button_set_delay">设置延时</string>
-    <string name="button_set">设置</string>
-    <string name="button_get">读取</string>
-    <string name="title_text_lpw">低电平脉冲宽度：</string>
-    <string name="title_text_bit0r">Bit0高电平脉宽：</string>
-    <string name="title_text_bit1r">Bit1高电平脉宽：</string>
-    <string name="title_text_voltage">启动脉冲电压：</string>
-    <string name="title_text_pulse_width">启动脉冲宽度：</string>
-    <string name="title_text_stop_pulse">停顿脉冲宽度：</string>
-    <string name="text_pulse_unit">μs</string>
-    <string name="text_current_unit">μA</string>
-    <string name="title_text_dac">比较门限值：</string>
-    <string name="title_text_work_voltage">工作电压：</string>
-    <string name="title_text_current">空载电流补偿：</string>
-    <string name="button_open_bus">打开总线</string>
-    <string name="button_close_bus">关闭总线</string>
     <string name="button_back">返回</string>
+    <string name="text_unlock">雷管未锁码</string>
+    <string name="detect_finished">检测完毕！</string>
+    <string name="error_unlock">没有锁定</string>
+    <string name="error_password">密码错误</string>
+    <string name="error_charge">充电不满</string>
+    <string name="error_delay">延期错误</string>
+    <string name="unit_section">段</string>
+    <string name="unit_row">排</string>
+    <string name="unit_hole">孔</string>
+    <string name="unit_detonator">发</string>
+    <string name="text_uid">内码</string>
+    <string name="semi_alter_write">已切换写码模式！</string>
+    <string name="semi_alter_read">已切换读码模式！</string>
+    <string name="semi_error_not_detect">检测不到！</string>;
+    <string name="semi_error_read">读码错误！</string>;
+    <string name="semi_error_capacity">电容损坏！</string>;
+    <string name="semi_error_bridge">桥丝断开！</string>;
+    <string name="semi_error_version">版本错误！</string>;
+    <string name="semi_error_data">数据错误！</string>;
+    <string name="semi_error_write">写入错误！</string>;
+    <string name="semi_step">第%1$d步</string>;
+    <string name="semi_bridge_type1">钢带桥丝！</string>;
+    <string name="semi_bridge_type2">贴片桥丝！</string>;
 </resources>
